# sso

./: .gitignore  CLAUDE.md  README.md  USER_JOURNEYS.md
api/: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_SSO_API_DOCUMENTATION.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  OAUTH_REDIRECT_FLOWS.md  README.md  docker-compose.yml  docker-entrypoint.sh
api/.sqlx/: query-0bcf6885372c55c57aa14984919ea382c043fa03010a9cd64c49ea8d20fa426c.json  query-0ded2450525e9ff967f6f7aa563838e0b8e1cf7fc8e14d70747e8a3af1483000.json  query-10719d9a45560364625b4ff7ecaccba5dd930a691c5f05f50a9b3a83e33095a1.json  query-13fced6ab2458463a06acf8c64469bd2d648897a998be1a4c61461cfd3544558.json  query-3268ab26d61212658b8b1ee0e91da50b6304f02e343c4d70c064af9d4ea1e1d7.json  query-3d1fad2495d78e2d831078b0c6682bfb19c74461ebb648d2f162ece70fb0ccb4.json  query-41fac31a7089738dcfdf13e4d6c14d0ce754a88ec6471a3ff9e9b7848322d26b.json  query-59355a46ab6631d68623a5fdac3c96f14858c68437786764be948d2d512ca083.json  query-5d78835795bef349f53c32ccaf2ac00520b6e94d361cfce9309192ccb51774e6.json  query-5e1342dfb1dee58f1b6b06b440c3a0b496a9681c687810f34f8da91858d0535d.json  query-5f12aa7263165e1c9d00feb41fbe4e2eda17d477ee18228a099a9be831b90c62.json  query-601c026a36f4435e3cca57e83c1b1f603b100f7575896b4e5d36e5f091f6a4b0.json  query-6169fe49da155d8a47c8a55db681f1e768ddf65360544caafa353c07a5eba7dd.json  query-63aaf193f1337e6af41c2dcbca559af68a7b81044facda30aa09d4c9acaae7c7.json  query-6538d09fb1883549e0a837d2fac01318f3f0c7b0437fc2003050d1207ca5603f.json  (+19 more)
api/migrations/: 00000000000000_initial_schema.sql  (+10 more)
(+124 files in other folders)
