[package]
name = "sso"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT (RSA support is built-in in v9)
jsonwebtoken = "9"

# OAuth2
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }

# Stripe
async-stripe = { version = "0.36", features = ["runtime-tokio-hyper", "webhook-endpoints"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
futures = "0.3"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"

# RSA (for JWKS generation)
rsa = "0.9"

# HTTP types
http = "1.0"
